# ml-dl-playground

./: .gitignore  Makefile  README.md  pyproject.toml
ml_dl_playground/iris/: README.md  main.py  prepareData.py  train.py
ml_dl_playground/iris_app/: train.py
ml_dl_playground/metrics/: mlflow.py
ml_dl_playground/metrics/multiclass/: classification.py
ml_dl_playground/utils/: data.py  fs.py  hyperparameterTuning.py
