[tool.poetry]
name = "ml-dl-playground"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.10.0"
scikit-learn = "^1.4.0"
scikit-learn-intelex = "^2024.1.0"
skl2onnx = "^1.16.0"
click = "^8.1.7"
progress = "^1.6"
pandas = "^2.2.0"
numpy = "^1.26.3"
psutil = "^5.9.8"
pynvml = "^11.5.0"
ucimlrepo = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
